Fixing the audio player's memory access