@@ -130,6 +130,19 @@ compose.desktop {
     application {
         mainClass = "dev.anthonyhfm.amethyst.MainKt"
 
+        jvmArgs += listOf(
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/sun.misc=ALL-UNNAMED",
+            "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
+            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-exports=java.base/sun.misc=ALL-UNNAMED",
+            "-Djava.library.path=."
+        )
+
         nativeDistributions {
             packageName = "Amethyst"
             packageVersion = "1.0.0"
